Fixed miss alignment issue on Task text

--- a/src/components/TaskEntry/taskEntry.css
+++ b/src/components/TaskEntry/taskEntry.css
@@ -10,3 +10,7 @@
   float: right;
   margin-top: 9px;
 }
+
+.TaskEntry .textTopMargin{
+  margin-top:0.55rem;
+}
